[package]
name = "ovs-rust"
version = "0.1.0"
edition = "2021"

[development]
address = "localhost"
port = 8001

[staging]
address = "0.0.0.0"
port = 8001

[production]
address = "0.0.0.0"
port = 8001

[dependencies]
rocket_cors = "0.5.1"
network-interface = "0.1.6"
rustc-serialize = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "1.1.2", features = ["v4"] }
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json"] }